--- a/Lab_Management.v1/src/main/resources/templates/admin/managing-unit.html
+++ b/Lab_Management.v1/src/main/resources/templates/admin/managing-unit.html
@@ -12,7 +12,11 @@
 <body>
 <!--<div th:replace="admin/headerAdmin :: header-admin"></div>-->
 <managingunit>
-    <h1 style="text-align: center" class="text-uppercase font-weight-bold"> Danh mục Đơn vị quản lý</h1>
+    <h1 style="text-align: center" class="text-uppercase font-weight-bold"> Danh mục Đơn vị quản lý
+        <a th:href="'/Lab/admin/Export/ManagingUnits'" >
+            <img src="/images/download.png" alt="Tải xuống" style="max-width: 2%" >
+        </a>
+    </h1>
     <!--<div th:replace="admin/add-nocite.html :: notice"></div>-->
     <div class="form-group" style="display: flex ; justify-content: space-around">
         <form th:action="@{'/Lab/admin/ManagingUnit/delete'}" method="post">
