--- a/Lab_Management.v1/src/main/resources/templates/admin/inventory-lab-readOnly.html
+++ b/Lab_Management.v1/src/main/resources/templates/admin/inventory-lab-readOnly.html
@@ -16,7 +16,19 @@
 <inventory-lab-readOnly>
     <!--<div th:replace="admin/headerAdmin :: header-admin"></div>-->
     <style>p{margin: unset}</style>
-    <h1 style="margin-top: 50px; text-align: center;text-transform: uppercase;">danh sách Kiểm kê</h1>
+    <h1 style="margin-top: 50px; text-align: center;text-transform: uppercase;">danh sách Kiểm kê
+        <a href="#"
+           class="col-3" onclick="event.preventDefault(); document.getElementById('download-form').submit();">
+            <img src="/images/download.png" alt="Tải xuống" style="max-width: 2%">
+        </a>
+    </h1>
+    <form id="download-form" th:action="'/Lab/admin/Export/AllshowinventoryLab/'" method="get" style="display: none;">
+        <input type="hidden" name="username" th:value="${#authentication.name}" />
+        <input type="hidden" name="managingUnitsCheck" th:value="${managingUnitsCheck != null ? managingUnitsCheck : false}" />
+        <input type="hidden" name="yearSelected" th:value="${year != null ? year : 0}" />
+        <input type="hidden" name="labId" th:value="${labDTO.getId != null ? labDTO.getId : 0}" />
+    </form>
+
     <h1 style="text-align: center;text-transform: uppercase;">Phòng: <span class="font-weight-bold text-danger" th:text="${labDTO.getLabName}"></span></h1>
     <h2 style="text-align: center;" class="text-primary text-uppercase" th:text="${labDTO.getManagingUnit}"></h2>
     <br>
@@ -141,8 +153,18 @@
 
 <inventory-AllLab-readOnly>
     <h1 style="margin-top: 50px; text-align: center;" class="text-uppercase text-danger font-weight-bold">
-        Danh sách kiểm kê [[${#lists.size(inventoryResults)}]] phòng</h1>
-
+        Danh sách kiểm kê [[${#lists.size(inventoryResults)}]] phòng
+        <a href="#"
+           class="col-3" onclick="event.preventDefault(); document.getElementById('download-form-all').submit();">
+            <img src="/images/download.png" alt="Tải xuống" style="max-width: 2%">
+        </a>
+    </h1>
+    <form id="download-form-all" th:action="'/Lab/admin/Export/AllshowinventoryLab/'" method="get" style="display: none;">
+        <input type="hidden" name="username" th:value="${#authentication.name}" />
+        <input type="hidden" name="managingUnitsCheck" th:value="${managingUnitsCheck != null ? managingUnitsCheck : false}" />
+        <input type="hidden" name="yearSelected" th:value="${year != null ? year : 0}" />
+        <input type="hidden" name="managingUnitId" th:value="${managingUnitId != null ? managingUnitId : 0}" />
+    </form>
     <form th:action="'/Lab/admin/Showinventory/AllshowinventoryLab'" method="get">
         <div class="d-flex flex-column">
             <input type="hidden" name="username" th:value="${#authentication.name}">
