--- a/Lab_Management.v1/src/main/resources/templates/admin/labs-edit-form.html
+++ b/Lab_Management.v1/src/main/resources/templates/admin/labs-edit-form.html
@@ -122,6 +122,17 @@
         <h1 class="text-center">============================================</h1>
         <br>
         <h2 class="text-center font-weight-bold text-uppercase">Chi tiết chấm điểm khai thác ptn</h2>
+        <form id="download-form" th:action="'/Lab/admin/Export/LabAndScores/'+${labDTO.id}" method="get" style="display: none;">
+            <input type="hidden" name="username" th:value="${#authentication.name}" />
+            <input type="hidden" name="experiment_group" th:value="${experiment_group != null ? experiment_group : 0}" />
+            <input type="hidden" name="experiment_type" th:value="${experiment_type != null ? experiment_type : 0}" />
+            <input type="hidden" name="experiment_report" th:value="${experiment_report != null ? experiment_report : 0}" />
+            <input type="hidden" name="experiment_YesNo" th:value="${experiment_YesNo != null ? experiment_YesNo : false}" />
+            <input type="hidden" name="start_date" th:value="${start_date}" />
+            <input type="hidden" name="end_date" th:value="${end_date}" />
+            <input type="hidden" name="unsuccess" th:value="${unsuccess != null ? unsuccess : false}" />
+            <input type="hidden" name="success" th:value="${success != null ? success : false}" />
+        </form>
         <h2 class="text-center font-weight-bold text-uppercase text-primary" th:text="${labDTO.labName}"></h2>
         <!--<h4 class="text-center font-weight-bold text-danger" th:text="'(Từ ngày ' + ${start_date} + ' đến ngày ' + ${end_date} + ' Tổng: '+${#numbers.formatDecimal(labsOnLineAndScore.score, 1, 1, 'POINT')}+' điểm)'"></h4>-->
         <h4 class="text-center font-weight-bold text-danger" th:text="'(Từ ngày ' + ${#strings.substring(start_date, 0, 10)}
@@ -174,8 +185,12 @@
                             <input type="datetime-local" class="form-control" id="end_date" name="end_date"
                                    th:value="${end_date}" required><br><br>
                         </div>
-                        <div class="d-flex justify-content-around align-content-center row">
-                            <button type="submit" class="btn btn-success mb-4 col-3">Xem</button>
+                        <div class="row justify-content-around align-content-center mb-4">
+                            <a href="#"
+                               class="col-3" onclick="event.preventDefault(); document.getElementById('download-form').submit();">
+                                <img src="/images/download.png" alt="Tải xuống" class="img-fluid">
+                            </a>
+                            <button type="submit" class="btn btn-warning col-6 text-center">Xem</button>
                         </div>
                     </div>
                 </div>
@@ -201,6 +216,9 @@
             </div>
         </form>
     </div>
+    <br>
+    <br>
+    <br>
     <div class="main-card mb-3 card">
         <div class="card-body">
             <table style="width: 100%;" id="popup-example" class="table table-hover table-striped table-bordered">
@@ -218,10 +236,16 @@
                     <td th:text="${iter.index+1}"></td>
                     <td class="text-primary" th:text="${typeName}"></td>
                     <td>
-                        <span th:text="${labsOnLineAndScore.quantity[iter.index]}"></span>
-                        <span th:if="${#strings.contains(typeName, 'Giờ khai thác')}" th:text="'bài TN (Tổng: ' + ${labsOnLineAndScore.hour} +' giờ)'"></span>
-                        <button type="button" class="form-control btn btn-primary btn-detail"
-                        th:data="${labsOnLineAndScore.lab.id}">Chi tiết</button>
+                        <div class="row justify-content-around">
+                            <div class="col-6">
+                                <span th:text="${labsOnLineAndScore.quantity[iter.index]}"></span>
+                                <span th:if="${#strings.contains(typeName, 'Giờ khai thác')}" th:text="'bài TN (Tổng: ' + ${labsOnLineAndScore.hour} +' giờ)'"></span>
+                            </div>
+                            <div class="col-4" th:if="${#lists.size(labsOnLineAndScore.lessonName)!=0 && #strings.contains(typeName, 'Giờ khai thác')}">
+                                <button type="button" class="form-control btn btn-primary btn-detail"
+                                        th:data="${labsOnLineAndScore.lab.id}">Chi tiết</button>
+                            </div>
+                        </div>
                     </td>
                     <td class="text-danger">
                         <strong>
@@ -251,6 +275,34 @@
         </div>
     </div>
 
+    <!-- Popup -->
+    <div id="popup" class="popup">
+        <div class="popup-content" style="max-width: 200rem; top: 25%; left: 17%">
+            <h2>CHI TIẾT BÀI THÍ NGHIỆM</h2>
+            <div class="main-card mb-3 card">
+                <div class="card-body">
+                    <table style="width: 100%;" id="popup-example" class="table table-hover table-striped table-bordered">
+                        <thead>
+                        <tr>
+                            <th>STT</th>
+                            <th>Tên bài</th>
+                        </tr>
+                        </thead>
+                        <tbody id="tbody">
+                        </tbody>
+                        <tfoot>
+                        <tr>
+                            <th>STT</th>
+                            <th>Phân loại</th>
+                        </tr>
+                        </tfoot>
+                    </table>
+                </div>
+            </div>
+            <button type="button" class="btn btn-secondary close-btn">Đóng</button>
+        </div>
+    </div>
+
 <!-- Link to Bootstrap JS and jQuery -->
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script> <!--Phải load jquery trước khi load bootstrap js-->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -258,29 +310,21 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <script src="/js/lab-rankings-score.js"></script>
     <script src="/js/booking-lab.js"></script>
-    <script>
-        function addEqui() {
-            var seriesElement = $('#chosseSeries');
-
-            // Thêm thuộc tính CSS để phóng to phần tử
-            seriesElement.css({
-                'transform': 'scale(1.2)',
-                'transition': 'transform 0.3s ease-in-out', // Thêm transition
+    <script th:inline="javascript">
+        var labsOnLineAndScore = [[${labsOnLineAndScore}]];
+        var experiment_YesNo = [[${experiment_YesNo}]];
+        $(document).ready(function() {
+            $(".btn-detail").click(function() {
+                var labid = parseInt($(this).attr('data'));
+                $(".popup").slideDown(300);
+                clickDetailLesson(labsOnLineAndScore);
             });
 
-            // Xóa thuộc tính CSS sau 2 giây sử dụng setTimeout
-            setTimeout(function() {
-                seriesElement.css({
-                    'transform': 'none',
-                });
-            }, 1000);
+        });
 
-            // Gọi sự kiện focus để mở danh sách các lựa chọn
-            seriesElement.focus();
-        }
-    </script>
-    <script th:inline="javascript">
+
         var labId = [[${labDTO.id}]];
+        console.log(labId)
         var experimentGroups = [[${experimentGroups}]];
         var experimentTypes = [[${experimentTypes}]];
         var experimentReports = [[${experimentReports}]];
