--- a/Lab_Management.v1/src/main/resources/templates/admin/Dashboard.html
+++ b/Lab_Management.v1/src/main/resources/templates/admin/Dashboard.html
@@ -23,7 +23,7 @@
 <body>
 <dashboard>
     <div class="d-flex justify-content-center align-content-center">
-        <h3 class="p-2" >YÊU CẦU ĐẶT PHÒNG</h3>
+        <h3 class="p-2 font-weight-bold" >YÊU CẦU ĐẶT PHÒNG</h3>
     </div>
     <div class="col-lg-12 col-xl-12">
         <div class="main-card mb-3 card">
@@ -84,7 +84,7 @@
             </div>
         </div>
     </div>
-    <h3 class="text-uppercase mb-3" style="text-align: center"> Top 3 Phòng thí nghiệm có điểm số cao nhất </h3>
+    <h3 class="text-uppercase mb-3 font-weight-bold" style="text-align: center"> Top 3 Phòng thí nghiệm có điểm số cao nhất </h3>
     <div class="main-card mb-5 card">
         <div class="grid-menu grid-menu-3col">
             <div class="no-gutters row">
@@ -244,7 +244,6 @@
         $('.lab-score').click(function () {
             window.location.href = "/Lab/admin/LabRankings";
         })
-
     </script>
 </dashboard>
 </body>
